Fix public link input aligment on Safari browsers

--- a/web/less/components/header.less
+++ b/web/less/components/header.less
@@ -73,6 +73,7 @@
 
             .edit-url {
                 height: 36px;
+                line-height: 36px;
                 float: left;
                 padding: 0 10px;
                 border: 2px solid @grey;
